--- a/assets/styles/css/home.css
+++ b/assets/styles/css/home.css
@@ -16,10 +16,23 @@
   font-family: "Open Sans", sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .container {
   width: 85%;
   margin: 0 auto;
   padding: 0 20px;
+}
+
+.hide-screen {
+  font-size: 0;
+  opacity: 0;
+  position: absolute;
+  top: -1000px;
+  max-height: 0;
+  max-width: 0;
 }
 
 /*Header*/
@@ -580,7 +593,16 @@ section.carrousel {
   margin-bottom: 16px;
 }
 
-.item.carrousel-box__img blockquote, .item.carrousel-box__img cite {
+.item.carrousel-box__img p {
+  max-width: 500px;
+  text-align: center;
+}
+
+.item.carrousel-box__img cite {
+  margin-top: 30px;
+}
+
+.item.carrousel-box__img q, .item.carrousel-box__img cite {
   text-align: center;
   color: #fff;
   font-size: 18px;
