--- a/assets/styles/css/home.css
+++ b/assets/styles/css/home.css
@@ -1,29 +1,30 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Babylonica&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-/*cores
-#c796e8
-#CE35FE
-#6F30E6
-#424EFC
-#006CE6
-#35E3FE
-#5ed3cb
-*/
-
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Babylonica&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 :root {
   font-family: "Open Sans", sans-serif;
+  --color-one: #fff;
+  --color-two: #c796e8;
+  --color-three: #5ed3cb;
+  --color-four: #505050;
+  --color-five: #a4a2a2;
+  --color-six: #000;
+  --color-seven: #fafafa;
+  --color-eigth: #6a6a6a;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 .container {
   width: 85%;
   margin: 0 auto;
   padding: 0 20px;
+  box-sizing: border-box;
 }
 
 /*Header*/
-
 h1 img {
   width: 175px;
 }
@@ -37,14 +38,25 @@ h1 img {
 ul.navigation-ul {
   display: flex;
   justify-content: space-between;
+  width: 100%;
+}
+
+[data-menu="close"] {
+  display: none;
 }
 
 .navigation-ul__li a {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 600;
   font-size: 18px;
   text-decoration: none;
-  color: #FFF;
+  color: var(--color-one);
+}
+
+nav.navigation {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 .nav-desktop__logo {
@@ -56,22 +68,22 @@ ul.navigation-ul {
 }
 
 header.nav-desktop {
-  width: 100%;
+  width: 100vw;
   height: 100px;
   display: flex;
   align-items: center;
   background-color: transparent;
   position: fixed;
+  top: 0;
   z-index: 1000;
 }
 
 header.nav-desktop__color {
-  background-color: #c796e8;
+  background-color: var(--color-two);
   position: fixed;
 }
 
 /*Banner Home*/
-
 .banner-home__ul-li {
   background-repeat: no-repeat;
   background-size: cover;
@@ -80,18 +92,28 @@ header.nav-desktop__color {
   width: 100%;
 }
 
-
 #banner-01 {
-  background-image: linear-gradient(rgba(228, 156, 246, 0.79), rgba(206, 53, 254, 0.07)), url(../../imagens/banner/banner-01-min.jpg);
+  background-image: linear-gradient(
+      rgba(228, 156, 246, 0.79),
+      rgba(206, 53, 254, 0.07)
+    ),
+    url(../../imagens/banner/banner-01-min.jpg);
 }
 
 #banner-02 {
-  background-image: linear-gradient(rgba(228, 156, 246, 0.79), rgba(206, 53, 254, 0.07)), url(../../imagens/banner/banner-2-min.jpg);
+  background-image: linear-gradient(
+      rgba(228, 156, 246, 0.79),
+      rgba(206, 53, 254, 0.07)
+    ),
+    url(../../imagens/banner/banner-2-min.jpg);
 }
 
 #banner-03 {
-  background-image: linear-gradient(rgba(228, 156, 246, 0.79), rgba(206, 53, 254, 0.07)), url(../../imagens/banner/banner-3-min.jpg);
-
+  background-image: linear-gradient(
+      rgba(228, 156, 246, 0.79),
+      rgba(206, 53, 254, 0.07)
+    ),
+    url(../../imagens/banner/banner-3-min.jpg);
 }
 
 .banner-home__ul-box {
@@ -114,11 +136,11 @@ h2 {
 }
 
 h2 {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 40px;
   font-size: 500;
   font-weight: 500;
-  color: #fff;
+  color: var(--color-one);
 }
 
 .banner-home__ul-box img {
@@ -150,7 +172,7 @@ section.about-us {
 }
 
 .about-us__box-imgs h2 {
-  color: #505050;
+  color: var(--color-four);
   font-size: 18px;
   font-weight: 600;
   margin-top: 10px;
@@ -164,24 +186,22 @@ section.about-us {
   font-size: 16px;
   line-height: 26px;
   text-align: center;
-  color: #a4a2a2;
+  color: var(--color-five);
   font-weight: 400;
 }
 
 a.about-us__box-imgs__a {
-  transition: .5s ease;
+  transition: 0.5s ease;
 }
-
 
 a.about-us__box-imgs__a:hover {
   transform: translateY(-10px);
-  transition: .5s ease;
+  transition: 0.5s ease;
 }
 
 /*Galery*/
-
 .galery {
-  background-color: #fafafa;
+  background-color: var(--color-seven);
   padding: 50px 0;
 }
 
@@ -193,8 +213,8 @@ a.about-us__box-imgs__a:hover {
   padding: 0 70px 70px;
 }
 
-
-.galery h3, .galery-hours__text h3 {
+.galery h3,
+.galery-hours__text h3 {
   font-size: 30px;
   font-weight: 600;
   margin-top: 10px;
@@ -208,8 +228,9 @@ a.about-us__box-imgs__a:hover {
   padding-top: 100px;
 }
 
-.galery p, .galery-hours__text p {
-  color: #a4a2a2;
+.galery p,
+.galery-hours__text p {
+  color: var(--color-five);
   text-align: center;
   font-size: 18px;
   line-height: 30px;
@@ -237,7 +258,6 @@ a.about-us__box-imgs__a:hover {
   align-items: center;
 }
 
-
 /*Class schedule*/
 .galery-hours__class {
   padding-bottom: 50px;
@@ -247,7 +267,6 @@ a.about-us__box-imgs__a:hover {
   display: flex;
   align-items: center;
   justify-content: space-between;
-
 }
 
 .galery-hours__box-img {
@@ -255,17 +274,18 @@ a.about-us__box-imgs__a:hover {
   align-self: flex-start;
 }
 
-#box-hours p, #box-hours span {
-  color: #fff;
+#box-hours p,
+#box-hours span {
+  color: var(--color-one);
   font-size: 18px;
 }
 
 h3#hours-h3 {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: bold;
   font-size: 25px;
   text-align: start;
-  color: #fff;
+  color: var(--color-one);
 }
 
 #box-hours p {
@@ -295,11 +315,10 @@ p#hours-p {
   width: 100%;
 }
 
-
 div#box-hours {
-  background-color: #c796e8;
+  background-color: var(--color-two);
   padding: 10px;
-  color: #fff;
+  color: var(--color-one);
 }
 
 .galery-hours__box-imgs__table:not(:last-of-type) {
@@ -331,8 +350,11 @@ section.banner-yoga {
   padding: 20px;
 }
 
-div#yoga-text h3, .banner-acro__text h3, .blog-box__text h3, .contact-box__text h2 {
-  font-family: 'Raleway', sans-serif;
+div#yoga-text h3,
+.banner-acro__text h3,
+.blog-box__text h3,
+.contact-box__text h2 {
+  font-family: "Raleway", sans-serif;
   font-size: 25px;
   font-weight: 600;
   margin-top: 10px;
@@ -345,17 +367,18 @@ div#yoga-text h3, .banner-acro__text h3, .blog-box__text h3, .contact-box__text 
 }
 
 .contact-box__text h2 {
-  color: #505050;
+  color: var(--color-four);
 }
 
 .banner-acro__text h3 {
-  color: #fff;
+  color: var(--color-one);
 }
 
-div#yoga-text p, .blog-box__text p {
+div#yoga-text p,
+.blog-box__text p {
   font-size: 16px;
   line-height: 26px;
-  color: #a4a2a2;
+  color: var(--color-five);
   font-weight: 400;
   text-align: justify;
 }
@@ -372,18 +395,18 @@ div#yoga-text p, .blog-box__text p {
   flex-direction: column;
 }
 
-.banner-yoga__table-box h3, .banner-yoga__table-title span {
+.banner-yoga__table-box h3,
+.banner-yoga__table-title span {
   font-size: 14px;
   font-weight: 400;
   line-height: 28px;
-  color: #000;
+  color: var(--color-six);
 }
-
 
 .banner-yoga__table-box__div {
   width: 100%;
   height: 10px;
-  background-color: #f2F2F2;
+  background-color: #f2f2f2;
   margin: 20px;
 }
 
@@ -398,68 +421,57 @@ div#yoga-text p, .blog-box__text p {
 }
 
 div#yoga-text h3:after {
-  content: '';
-  background-color: #c796e8;
+  content: "";
+  background-color: var(--color-two);
   width: 50px;
   height: 3px;
   position: absolute;
-  z-index: 1000;
+  z-index: 500;
   left: 0;
   bottom: -10px;
 }
 
 .banner-acro__text h3::after {
-  content: '';
-  background-color: #fff;
+  content: "";
+  background-color: var(--color-one);
   width: 50px;
   height: 3px;
   position: absolute;
-  z-index: 1000;
+  z-index: 500;
   left: 0;
   bottom: -10px;
 }
 
-
-#self::after {
-  content: "";
-  width: 90%;
-  height: 10px;
-  background-color: #c796e8;
-  z-index: 1000;
-  position: absolute;
-}
-
-#metabolism::after {
-  content: "";
-  height: 10px;
-  background-color: #c796e8;
-  z-index: 1000;
-  position: absolute;
-  width: 85%;
-}
-
-#flexibility::after {
-  content: "";
-  width: 90%;
-  height: 10px;
-  background-color: #c796e8;
-  z-index: 1000;
-  position: absolute;
-  width: 80%;
-}
-
+#self::after,
+#metabolism::after,
+#flexibility::after,
 #muscles::after {
   content: "";
   width: 90%;
   height: 10px;
-  background-color: #c796e8;
-  z-index: 1000;
+  background-color: var(--color-two);
+  z-index: 500;
   position: absolute;
+}
+
+#self::after {
+  width: 90%;
+}
+
+#metabolism::after {
+  width: 85%;
+}
+
+#flexibility::after {
+  width: 80%;
+}
+
+#muscles::after {
   width: 50%;
 }
 
 section.banner-acro {
-  background-color: #5ed3cb;
+  background-color: var(--color-three);
   padding: 50px 0;
 }
 
@@ -469,12 +481,13 @@ section.banner-acro {
   justify-content: space-between;
 }
 
-.banner-acro__img, .banner-acro__text {
+.banner-acro__img,
+.banner-acro__text {
   width: 50%;
-  padding: 0 10px
+  padding: 0 10px;
 }
 
-.banner-acro__img {
+.banner-acro__img img {
   max-width: 100%;
 }
 
@@ -482,13 +495,16 @@ section.banner-acro {
   font-size: 16px;
   line-height: 26px;
   font-weight: 400;
-  color: #fff;
+  color: var(--color-one);
 }
 
 /*Blog*/
+section#blog-id {
+  display: none;
+}
 
 section.blog {
-  background-color: #fafafa;
+  background-color: var(--color-seven);
   padding: 100px 0;
 }
 
@@ -505,7 +521,6 @@ section.blog {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-
 }
 
 .blog-box__imgs-img {
@@ -522,32 +537,32 @@ h3.blog-box__imgs-h3 {
 
 h3.blog-box__imgs-h3 a {
   text-decoration: none;
-  color: #505050;
+  color: var(--color-four);
   font-size: 18px;
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: 1.6px;
 }
 
-p.blog-box__imgs-p, .contact-box__text p {
+p.blog-box__imgs-p,
+.contact-box__text p {
   font-size: 16px;
   line-height: 26px;
-  color: #a4a2a2;
+  color: var(--color-five);
   font-weight: 400;
   margin-bottom: 20px;
 }
 
-p.blog-box__imgs-p, .contact-box__text p {
+p.blog-box__imgs-p,
+.contact-box__text p {
   font-size: 18px;
 }
-
 
 a.blog-box__imgs-span span {
   font-size: 14px;
   line-height: 24px;
-  color: #c796e8;
+  color: var(--color-two);
   font-weight: 400;
-
 }
 
 a.blog-box__imgs-span {
@@ -555,18 +570,16 @@ a.blog-box__imgs-span {
 }
 
 h3.blog-box__imgs-h3 a:hover {
-  color: #5ed3cb;
+  color: var(--color-three);
 }
 
 a.blog-box__imgs-span span:hover {
-  color: #5ed3cb;
+  color: var(--color-three);
 }
 
-
 /*Owl carrousel*/
-
 section.carrousel {
-  background-color: #c796e8;
+  background-color: var(--color-two);
   padding: 100px;
 }
 
@@ -580,11 +593,17 @@ section.carrousel {
   margin-bottom: 16px;
 }
 
-.item.carrousel-box__img blockquote, .item.carrousel-box__img cite {
+.item.carrousel-box__img blockquote,
+.item.carrousel-box__img cite {
   text-align: center;
-  color: #fff;
+  color: var(--color-one);
   font-size: 18px;
   line-height: 25px;
+}
+
+.item.carrousel-box__img cite {
+  color: var(--color-six);
+  margin-top: 30px;
 }
 
 .item.carrousel-box__img {
@@ -594,14 +613,16 @@ section.carrousel {
   justify-content: center;
 }
 
-.owl-carousel .owl-nav button.owl-next, .owl-carousel .owl-nav button.owl-prev, .owl-carousel button.owl-dot {
+.owl-carousel .owl-nav button.owl-next,
+.owl-carousel .owl-nav button.owl-prev,
+.owl-carousel button.owl-dot {
   font-size: 55px;
-  color: #fff;
+  color: var(--color-one);
 }
 
 /*Contact-us*/
 section.contact {
-  background-color: #fafafa;
+  background-color: var(--color-seven);
   padding: 100px 0;
 }
 
@@ -612,7 +633,8 @@ section.contact {
   padding-bottom: 50px;
 }
 
-form input, form button {
+form input,
+form button {
   display: inline-block;
   vertical-align: middle;
   width: 100%;
@@ -625,23 +647,22 @@ form input, form button {
   box-sizing: border-box;
   -webkit-appearance: none;
   -moz-appearance: none;
-  background-color: #fff;
+  background-color: var(--color-one);
   margin-bottom: 12px;
-  -webkit-transition: border-color .2s ease-out;
-  -moz-transition: border-color .2s ease-out;
-  transition: border-color .2s ease-out;
+  -webkit-transition: border-color 0.2s ease-out;
+  -moz-transition: border-color 0.2s ease-out;
+  transition: border-color 0.2s ease-out;
   resize: none;
 }
 
 form button {
-  background-color: #c796e8;
+  background-color: var(--color-two);
   border: 2px solid #c796e8;
-  color: #fff;
+  color: var(--color-one);
 }
 
-
 form button:hover {
-  background-color: #5ed3cb;
+  background-color: var(--color-three);
   border: 2px solid #5ed3cb;
   transition: 0.5s ease;
 }
@@ -662,7 +683,7 @@ form button:hover {
   padding-left: 14px;
   font-size: 16px;
   font-weight: 400;
-  color: #a4a2a2;
+  color: var(--color-five);
 }
 
 .contact-box__form {
@@ -678,10 +699,11 @@ form button:hover {
   width: 30%;
 }
 
-
-.fa.fa-pinterest-p, .fa.fa-whatsapp, .fa {
+.fa.fa-pinterest-p,
+.fa.fa-whatsapp,
+.fa {
   font-weight: 900 !important;
-  color: #c796e8
+  color: var(--color-two);
 }
 
 .contact-box__form-contact a {
@@ -689,7 +711,6 @@ form button:hover {
 }
 
 /*Footer*/
-
 footer {
   background-image: url(../../imagens/galery-site/footer-background-img.jpg);
   background-repeat: no-repeat;
@@ -700,7 +721,7 @@ footer {
 }
 
 .footer-networks {
-  color: #fff;
+  color: var(--color-one);
   display: flex;
   justify-content: space-between;
   margin-top: 50px;
@@ -712,18 +733,18 @@ footer {
   justify-content: center;
   width: 220px;
   height: 50px;
-  background-color: #c796e8;
+  background-color: var(--color-two);
   padding: 10px;
 }
 
 .footer-networks__contact h3:hover {
-  background-color: #5ed3cb;
+  background-color: var(--color-three);
   transition: 1s ease;
 }
 
 .footer-networks__contact a {
   text-decoration: none;
-  color: #fff;
+  color: var(--color-one);
 }
 
 .footer-instagram {
@@ -732,11 +753,9 @@ footer {
   justify-content: space-between;
 }
 
-.footer-instagram__photos img:hover {
-  background-color: aliceblue;
-}
-
-.footer-networks__contact, .footer-networks__post.blog, .footer-instagram {
+.footer-networks__contact,
+.footer-networks__post.blog,
+.footer-instagram {
   width: 30%;
 }
 
@@ -755,7 +774,7 @@ footer {
 }
 
 .footer-networks__post.blog:after {
-  content: '';
+  content: "";
   width: 100%;
   height: 1px;
   position: absolute;
@@ -766,7 +785,7 @@ footer {
 
 a.footer-network__post-a {
   text-decoration: none;
-  color: #fff;
+  color: var(--color-one);
 }
 
 p.footer-network__post-p {
@@ -796,14 +815,15 @@ span.footer-network__post-span {
   margin-bottom: 20px;
 }
 
-li.navigation-ul__li a:hover, a.footer-network__post-a:hover {
-  color: #c796e8;
+li.navigation-ul__li a:hover,
+a.footer-network__post-a:hover {
+  color: var(--color-two);
   transition: 0.5s ease;
 }
 
 .footer-copyright:before {
   content: "";
-  background-color: #fafafa;
+  background-color: var(--color-seven);
   width: 100%;
   height: 1px;
   z-index: 1000;
@@ -837,12 +857,12 @@ li.navigation-ul__li a:hover, a.footer-network__post-a:hover {
 
 .footer-dev h3 {
   font-size: 12px;
-  color: #6a6a6a;
+  color: var(--color-eigth);
 }
 
 .footer-dev h3:hover {
   font-size: 12px;
-  color: #c796e8
+  color: var(--color-two);
 }
 
 .footer-dev {
@@ -861,7 +881,7 @@ li.navigation-ul__li a:hover, a.footer-network__post-a:hover {
   height: 48px;
   z-index: 10000;
   text-align: center;
-  background-color: #c796e8;
+  background-color: var(--color-two);
 }
 
 a#footer-back-to-top {
@@ -879,12 +899,112 @@ a#footer-back-to-top svg {
   background-color: transparent;
   opacity: 0;
 }
+.footer-networks__post.blog {
+  display: none;
+}
 
-
-
-
+[data-menu="button"] {
+  display: none;
+}
 
 @media screen and (max-width: 768px) {
+  /*Menu Mobile*/
+  [data-menu="close"] {
+    display: block;
+  }
+
+  [data-menu="button"] {
+    display: block;
+  }
+
+  .navigation-logo__mobile {
+    width: 100%;
+    background-color: var(--color-two);
+    position: absolute;
+    top: 0;
+    height: 83px;
+    left: 0;
+    display: flex;
+    align-items: center;
+    padding-left: 30px;
+    z-index: -1;
+  }
+
+  [data-menu="button"] {
+    display: flex;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    align-items: center;
+    margin-right: left;
+  }
+
+  [data-menu="button"]::before {
+    margin-right: 4px;
+    content: "";
+    display: inline-block;
+    height: 3px;
+    width: 34px;
+    background: var(--color-one);
+    box-shadow: 0 8px #fff, 0 -8px #fff;
+    transition: transform 0.3s;
+  }
+
+  [data-menu="close"] {
+    position: absolute;
+    padding: 5px;
+    right: 30px;
+    top: 24px;
+    background-color: transparent;
+    border: none;
+    color: var(--color-one);
+    font-size: 20px;
+  }
+
+  ul.navigation-ul {
+    background-color: var(--color-one);
+    transform: translateX(-100%);
+    transition: 0.8s ease;
+    opacity: 0;
+    padding: 100px 30px;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 40px;
+    align-items: flex-start;
+    position: absolute;
+    top: 0;
+    width: 60vw;
+    height: 100vh;
+  }
+
+  ul.navigation-ul.active {
+    background-color: var(--color-one);
+    transform: translateX(0);
+    transition: 0.8s ease;
+    opacity: 1;
+    padding: 100px 30px;
+    flex-direction: column;
+    align-items: flex-start;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 60vw;
+    height: 100vh;
+    box-shadow: -200px 1px 180px -12px rgba(0, 0, 0, 0.71);
+    -webkit-box-shadow: -200px 1px 180px -12px rgba(0, 0, 0, 0.71);
+    -moz-box-shadow: -200px 1px 180px -12px rgba(0, 0, 0, 0.71);
+  }
+
+  .navigation-ul__li a {
+    color: var(--color-two);
+    z-index: 999;
+  }
+  /*End Menu Mobile*/
+
+  .nav-desktop__logo {
+    width: 50%;
+  }
+
   .banner-home__ul-box h2 {
     font-size: 30px;
   }
@@ -918,13 +1038,15 @@ a#footer-back-to-top svg {
     font-size: 18px;
   }
 
-  .galery p, .galery-hours__text p {
+  .galery p,
+  .galery-hours__text p {
     width: 100%;
     font-size: 16px;
     line-height: 22px;
   }
 
-  .galery h3, .galery-hours__text h3 {
+  .galery h3,
+  .galery-hours__text h3 {
     font-size: 25px;
     letter-spacing: 1.4px;
   }
@@ -962,17 +1084,14 @@ a#footer-back-to-top svg {
     padding: initial;
   }
 
-  .banner-acro__img img {
-    max-width: 100%;
-  }
-
   .banner-acro__box {
     display: flex;
     flex-direction: column;
     justify-content: center;
   }
 
-  .banner-acro__img, .banner-acro__text {
+  .banner-acro__img,
+  .banner-acro__text {
     width: 100%;
     padding: initial;
   }
@@ -992,7 +1111,8 @@ a#footer-back-to-top svg {
     margin-bottom: 30px;
   }
 
-  p.blog-box__imgs-p, .contact-box__text p {
+  p.blog-box__imgs-p,
+  .contact-box__text p {
     font-size: 16px;
   }
 
@@ -1036,7 +1156,9 @@ a#footer-back-to-top svg {
     margin-top: 30px;
   }
 
-  .footer-networks__contact, .footer-networks__post.blog, .footer-instagram {
+  .footer-networks__contact,
+  .footer-networks__post.blog,
+  .footer-instagram {
     width: 100%;
   }
 
@@ -1077,12 +1199,13 @@ a#footer-back-to-top svg {
     text-align: center;
   }
 
-  .nav-desktop__navigation {
-    display: none;
-  }
-
   .navigation-ul__li a {
     font-size: 16px;
   }
+}
 
+@media screen and (max-width: 400px) {
+  h1 img {
+    width: 100%;
+  }
 }
